Fix word wrapping

--- a/css/modules/tab-touragents.css
+++ b/css/modules/tab-touragents.css
@@ -412,6 +412,7 @@
     color: #6c6c6c;
     margin: 0;
     padding: 0;
+    word-wrap: break-word;
 }
 
 
